styles/styles.css
:root {
    --ff: Karla;
    --fs: 1rem;
    --fw1: 400;
    --fw2: 700;
    --cyan: hsl(179, 62%, 43%);
    --turquoise: hsl(179,46%,51%);
    --yellow: hsl(71, 73%, 54%);
    --lightgray: hsl(204, 43%, 93%);
    --grayblue: hsl(218, 22%, 67%);
    --white: hsl(0, 0%, 100%);
}

body {
    font-family: var(--ff);
    font-size: var(--fs);
    background-color: var(--lightgray);
}

h1 {
    color:var(--cyan);
    font-size: var(--fs);
    font-weight: var(--fw2);
}
h2 {
    font-size: var(--fs);
    font-weight: var(--fw2);
}
span {
    font-size: var(--fs);
    font-weight:var(--fw1);
    color: var(--lightgray);
}

.main {
    display: grid;
    place-items: center;
    margin: 25px;
}

/* .join styles */
.join {
    background-color: var(--white);
    padding: 15px;
    width: 100%;
}

.join h2 {
    color:var(--yellow);
}

.join p {
    color:var(--grayblue);
    line-height: 1.5rem;
}

/* .sub styles */
.sub {
    background-color: var(--cyan);
    padding: 15px;
    width: 100%;
    color: var(--white);
    line-height: 1.5rem;
}
.price {
    font-size: 2rem;
    font-weight: var(--fw2);
    margin: 0;
}
.btn {
    background-color: var(--yellow);
    color:var(--white);
    font-family: var(--ff);
    font-weight: var(--fw2);
    font-size: var(--fs);
    border: none;
    border-radius: 5px;
    width: 100%;
    height: 50px;
}

/* why styles */
.why {
    background-color: var(--turquoise);
    width: 100%;
    padding: 15px;
    color:var(--white);
}

